@@ -1,3 +1,11 @@
+1999-02-04  Jason L Tibbitts III  <tibbs@math.uh.edu>
+
+	* lib/Mj/Deliver/Envelope.pm (DESTROY): Shut down the SMTP
+        connection properly.
+
+	* lib/Mj/Deliver/SMTP.pm (QUIT): New method to shut down the
+        connection.
+
 Wed Feb  3 17:55:15 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
 
 	* lib/Majordomo.pm (valid_list): If not 'ALL' or 'GLOBAL',
